create3_ws/log/build_2026-01-26_18-56-59/img_server/stdout_stderr.log
running egg_info
writing ../../build/img_server/img_server.egg-info/PKG-INFO
writing dependency_links to ../../build/img_server/img_server.egg-info/dependency_links.txt
writing entry points to ../../build/img_server/img_server.egg-info/entry_points.txt
writing requirements to ../../build/img_server/img_server.egg-info/requires.txt
writing top-level names to ../../build/img_server/img_server.egg-info/top_level.txt
reading manifest file '../../build/img_server/img_server.egg-info/SOURCES.txt'
writing manifest file '../../build/img_server/img_server.egg-info/SOURCES.txt'
running build
running build_py
copying img_server/img_server_node.py -> /home/jlmre/create3_ws/build/img_server/build/lib/img_server
running install
running install_lib
copying /home/jlmre/create3_ws/build/img_server/build/lib/img_server/img_server_node.py -> /home/jlmre/create3_ws/install/img_server/lib/python3.10/site-packages/img_server
byte-compiling /home/jlmre/create3_ws/install/img_server/lib/python3.10/site-packages/img_server/img_server_node.py to img_server_node.cpython-310.pyc
running install_data
  File "/home/jlmre/create3_ws/install/img_server/lib/python3.10/site-packages/img_server/img_server_node.py", line 81
    print(f"Dato: {request.form.get("people")}")
                                     ^^^^^^
SyntaxError: f-string: unmatched '('

running install_egg_info
removing '/home/jlmre/create3_ws/install/img_server/lib/python3.10/site-packages/img_server-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/img_server/img_server.egg-info to /home/jlmre/create3_ws/install/img_server/lib/python3.10/site-packages/img_server-0.0.0-py3.10.egg-info
running install_scripts
Installing img_server_node script to /home/jlmre/create3_ws/install/img_server/lib/img_server
writing list of installed files to '/home/jlmre/create3_ws/build/img_server/install.log'
